--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact Us') %>
-<h1>Sample App - Contact Us Page</h1>
+<h1>Sample App - Contact Us Page 2</h1>
 <p>
   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
